<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_service"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hitachi_tstv.yodpanom.yaowaluk.proofdelivery.ServiceActivity">

    <Button
        android:text="@string/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/h_button" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/block"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:layout_marginTop="13dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon_size"
                app:srcCompat="@drawable/doremon48"
                android:id="@+id/imageView"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/driver_name"
                        android:layout_width="@dimen/text_block_size"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:textSize="@dimen/h_button" />

                    <TextView
                        android:text="@string/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:textSize="@dimen/h_button" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/truck"
                        android:layout_width="@dimen/text_block_size"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:textSize="@dimen/h_button" />

                    <TextView
                        android:text="@string/license"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:textSize="@dimen/h_button" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/joblist"
                android:layout_width="@dimen/text_block_size"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textSize="@dimen/h_button"
                android:layout_weight="0.05"
                android:layout_margin="@dimen/mini_margin"
                android:padding="@dimen/mini_margin" />

            <TextView
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="0.5"
                android:textSize="@dimen/h_button"
                android:layout_margin="@dimen/mini_margin" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:layout_weight="1"
                android:textSize="@dimen/h_button"
                android:layout_margin="@dimen/mini_margin" />

            <TextView
                android:text="@string/store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:textSize="@dimen/h_button"
                android:layout_margin="@dimen/mini_margin" />

            <TextView
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_weight="1"
                android:textSize="@dimen/h_button"
                android:layout_margin="@dimen/mini_margin" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listJob" />
    </LinearLayout>

</RelativeLayout>