<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hitachi_tstv.yodpanom.yaowaluk.proofdelivery.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/block"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:gravity="center">

        <ImageView
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/htslogo"
            android:id="@+id/imageView2"
            android:layout_margin="@dimen/mini_margin"
            android:layout_width="@dimen/logo_width" />

        <TextView
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="@dimen/h1"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_margin="@dimen/margin"
            android:textSize="@dimen/h3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:hint="@string/user"
            android:layout_margin="@dimen/margin"
            android:textSize="@dimen/h2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:id="@+id/editText2"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="@dimen/margin"
            android:textSize="@dimen/h2" />

    </LinearLayout>

    <Button
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:elevation="0dp"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/h_button" />

</RelativeLayout>